--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/drawable/fluss",
   "devDependencies": {
+    "browserify": "^8.0.3",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
-    "mocha": "^2.1.0",
-    "typedoc": "^0.1.3",
     "gulp-clean": "^0.3.1",
-    "gulp-tsc": "^0.9.2"
+    "gulp-tsc": "^0.9.2",
+    "mocha": "^2.1.0",
+    "typedoc": "^0.1.3"
   }
 }
