--- a/examples/bower.json
+++ b/examples/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "todomvc-common": "~0.3.1"
+    "todomvc-common": "~0.3.1",
+    "react": "~0.12.2"
   }
 }
