--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-tsc": "^0.9.2",
     "mocha": "^2.1.0",
-    "typedoc": "^0.1.3"
+    "typedoc": "^0.1.3",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
