--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-tsc": "^0.9.2",
     "mocha": "^2.1.0",
+    "sinon": "^1.12.2",
     "typedoc": "^0.1.3",
     "vinyl-source-stream": "^1.0.0"
   }
