--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-clean": "^0.3.1",
+    "gulp-rename": "^1.2.0",
     "gulp-tsc": "^0.9.2",
+    "gulp-uglify": "^1.0.2",
     "mocha": "^2.1.0",
     "sinon": "^1.12.2",
     "typedoc": "^0.1.3",
