--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.4.3",
+    "gulp-modify": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-typescript": "^2.3.0",
