--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluss",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Developmenttree for fluss",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "gulp-concat": "^2.4.3",
     "gulp-modify": "0.0.4",
     "gulp-rename": "^1.2.0",
+    "gulp-requirejs": "^0.1.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-typescript": "^2.3.0",
     "gulp-uglify": "^1.0.2",
