--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluss",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Developmenttree for fluss",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-requirejs": "^0.1.3",
     "gulp-sourcemaps": "^1.3.0",
+    "gulp-typedoc": "^1.0.5",
     "gulp-typescript": "^2.3.0",
     "gulp-uglify": "^1.0.2",
     "mocha": "^2.1.0",
