--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
+    "gulp-concat-sourcemap": "^1.3.1",
     "gulp-modify": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-requirejs": "^0.1.3",
