--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "flux",
     "reactive",
-    "typescipt"
+    "ES6"
   ],
   "author": "Stephan Smola",
   "license": "MIT",
@@ -22,22 +22,20 @@
   },
   "homepage": "https://github.com/drawable/fluss",
   "devDependencies": {
+    "babel": "^4.5.5",
     "browserify": "^8.0.3",
     "chai": "^1.10.0",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
+    "gulp-babel": "^4.0.0",
     "gulp-concat": "^2.4.3",
-    "gulp-concat-sourcemap": "^1.3.1",
     "gulp-modify": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-requirejs": "^0.1.3",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-typedoc": "^1.0.5",
-    "gulp-typescript": "^2.3.0",
     "gulp-uglify": "^1.0.2",
     "mocha": "^2.1.0",
     "sinon": "^1.12.2",
-    "typedoc": "^0.1.3",
     "vinyl-source-stream": "^1.0.0"
   }
 }
