--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-uglify": "^1.0.2",
     "mocha": "^2.1.0",
     "sinon": "^1.12.2",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "vinyl-buffer": "^1.0.0"
   }
 }
